rebrand: KoalaOps → Skyhook
Update all references from KoalaOps to Skyhook:
- Organization: KoalaOps → skyhook-io
- Author: KoalaOps → Skyhook
- Product name: Koala → Skyhook
- All usage examples and documentation updated

--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
 name: 'Docker Multi-Registry Build Push'
 description: 'Thin wrapper around docker/build-push-action with smart tagging and multi-registry support'
-author: 'KoalaOps'
+author: 'Skyhook'
 
 branding:
   icon: 'package'
