--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'Docker Multi-Registry Build Push'
+name: 'Skyhook Docker Multi-Registry Build Push'
 description: 'Thin wrapper around docker/build-push-action with smart tagging and multi-registry support'
 author: 'Skyhook'
 
