--- a/action.yml
+++ b/action.yml
@@ -210,15 +210,15 @@ runs:
           echo "No service_name provided, skipping config resolution"
           exit 0
         fi
-        echo "PWD=$(pwd)" && ls -la
+        
         # Find the config file
         CONFIG_FILE=""
-        if [[ -f "/.skyhook/skyhook.yaml" ]]; then
-          CONFIG_FILE="/.skyhook/skyhook.yaml"
+        if [[ -f "code/.skyhook/skyhook.yaml" ]]; then
+          CONFIG_FILE="code/.skyhook/skyhook.yaml"
         fi
         ls
         if [[ -z "$CONFIG_FILE" ]]; then
-          echo "::warning::service_name '$SERVICE_NAME' provided but /.skyhook/skyhook.yaml not found. Falling back to input parameters."
+          echo "::warning::service_name '$SERVICE_NAME' provided but code/.skyhook/skyhook.yaml not found. Falling back to input parameters."
           exit 0
         fi
 
