--- a/action.yml
+++ b/action.yml
@@ -197,6 +197,7 @@ runs:
     - name: Resolve build config from .skyhook/skyhook.yaml
       id: skyhook_config
       shell: bash
+      working-directory: code
       run: |
         set -euo pipefail
 
@@ -213,12 +214,12 @@ runs:
         
         # Find the config file
         CONFIG_FILE=""
-        if [[ -f "code/.skyhook/skyhook.yaml" ]]; then
-          CONFIG_FILE="code/.skyhook/skyhook.yaml"
+        if [[ -f ".skyhook/skyhook.yaml" ]]; then
+          CONFIG_FILE=".skyhook/skyhook.yaml"
         fi
         ls
         if [[ -z "$CONFIG_FILE" ]]; then
-          echo "::warning::service_name '$SERVICE_NAME' provided but code/.skyhook/skyhook.yaml not found. Falling back to input parameters."
+          echo "::warning::service_name '$SERVICE_NAME' provided but .skyhook/skyhook.yaml not found. Falling back to input parameters."
           exit 0
         fi
 
